netpol-drop-mongodb.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: drop-ingress-to-mongodb
  namespace: pets
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
  - Ingress
